# advent-of-code-2024

./: .gitignore  README.md  aoc2024.cabal  crypto.ts  deno.json  fourmolu.yaml
src/: ErrorHandling.hs  Main.hs  RegexExamples.hs  Runner.hs  Utils.hs
src/Day1/: Part1.hs  Part2.hs
src/Day10/: Part1.hs  Part2.hs
src/Day11/: Part1.hs  Part2.hs
src/Day12/: Part1.hs  Part2.hs
src/Day13/: Part1.hs  Part2.hs
src/Day14/: Part1.hs  Part2.hs
src/Day15/: Part1.hs  Part2.hs
src/Day16/: Part1.hs  Part2.hs
src/Day17/: Part1.hs  Part2.hs
src/Day18/: Part1.hs  Part2.hs
src/Day19/: Part1.hs  Part2.hs
src/Day2/: Part1.hs  Part2.hs
src/Day20/: Part1.hs  Part2.hs
src/Day21/: Part1.hs  Part2.hs
src/Day22/: Part1.hs  Part2.hs
src/Day23/: Part1.hs  Part2.hs
src/Day24/: Part1.hs  Part2.hs
src/Day25/: Part1.hs  Part2.hs
src/Day3/: Part1.hs  Part2.hs
src/Day4/: Part1.hs  Part2.hs  test.ts
src/Day5/: Part1.hs  Part2.hs  parser.ts
src/Day6/: Part1.hs  Part2.hs
src/Day7/: Part1.hs  Part2.hs
src/Day8/: Part1.hs  Part2.hs
src/Day9/: Part1.hs  Part2.hs
tools/: README.md  crypto.ts  deno.json  setup.ts
